Don't do odd things with the header bar on mobile horizontal scrolling [Fixes #35]

--- a/server/src/main/resources/assets/layout.css
+++ b/server/src/main/resources/assets/layout.css
@@ -14,6 +14,7 @@ html {
     display: block;
     padding-bottom: 1em;
     position: relative;
+    overflow-x: auto;
 }
 #noncode {
     padding: 0 1em;
